samples/_failures_safe/1761179622_114623_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4f14d5c9.c: In function ‘main’:
./samples/SAFE/__tmp_4f14d5c9.c:151:41: error: expected ‘)’ at end of input
  151 |                     print_matrix(&result
      |                                 ~       ^
      |                                         )
./samples/SAFE/__tmp_4f14d5c9.c:151:21: error: too few arguments to function ‘print_matrix’
  151 |                     print_matrix(&result
      |                     ^~~~~~~~~~~~
./samples/SAFE/__tmp_4f14d5c9.c:55:6: note: declared here
   55 | void print_matrix(const Matrix* mat, const char* name) {
      |      ^~~~~~~~~~~~
./samples/SAFE/__tmp_4f14d5c9.c:151:21: error: expected declaration or statement at end of input
  151 |                     print_matrix(&result
      |                     ^~~~~~~~~~~~
./samples/SAFE/__tmp_4f14d5c9.c:151:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_4f14d5c9.c:151:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_4f14d5c9.c:151:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_4f14d5c9.c:151:21: error: expected declaration or statement at end of input
